# xonixPOO

./: .gitignore  CMakeLists.txt  Entities.cpp  Game.cpp  Game.h  Ghost.cpp  Item.cpp  Item.h  Menu.cpp  Menu.h  Player.cpp  Scene.cpp  main.cpp
data/: Entities.h  Ghost.h  Player.h  Scene.h
